<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:textSize="25dp"
        android:text="@string/app_tittle"
        android:background="@color/blue1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:text="@string/homeText"
        />

    <EditText
        android:id="@+id/activity_main_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:hint="@string/heightInput"
        android:inputType="numberDecimal"
        />

    <EditText
        android:id="@+id/activity_main_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:hint="@string/weightInput"
        android:inputType="numberDecimal"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue2"
        android:onClick="calculateBMI"
        />
</LinearLayout>